--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "kalabox-plugin-drupal-console",
-  "version": "0.0.1",
+  "version": "0.10.1",
   "description": "Plugin For Kalabox to use Drupal Console with Drupal 8 Apps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dustinleblanc/kalabox-plugin-drupal-console.git"
+    "url": "https://github.com/dustinleblanc/kalabox-plugin-drupal-console.git"
   },
   "keywords": [
     "drupal",
     "docker",
     "kalabox"
   ],
+  "dependencies": {
+    "lodash": "^3.9.3"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bump": "0.0.16",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-jscs": "~0.8.1",
+    "jshint-stylish": "~1.0.0",
+    "matchdep": "^0.3.0"
+  },
   "author": "Dustin LeBlanc <dustin.m.leblanc@gmail.com>",
   "license": "MIT",
   "bugs": {
